--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
   
   /* Style the header */
   header {
-    background-color: #666;
+    background-color: blue;
     padding: 30px;
     text-align: center;
     font-size: 35px;
